--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-  <iframe  name="leftframe" src="left.html" width="20%" height="640vh"></iframe>  
-  <iframe name="rightframe" src="right.html" width="79%" height="640vh"frameborder="1"></iframe>
+  <iframe  name="leftframe" src="leftbar.html" width="20%" height="640vh"></iframe>  
+  <iframe name="rightframe" src="rightbar.html" width="79%" height="640vh"frameborder="1"></iframe>
 </body>
 </html>
